# esp_spi_lcd

./: CMakeLists.txt  README.md  partitions-16MB.csv  partitions-4MB.csv
components/bsp/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/bsp/i2c/: i2c_new.c  i2c_new.h
components/bsp/iic/: iic.c  iic.h
components/bsp/lcd/: lcd.c  lcd.h
components/bsp/spi/: spi.c  spi.h
components/bsp/xl9555/: xl9555.c  xl9555.h
components/ftp/: CMakeLists.txt  ftp.c  ftp.h
main/: CMakeLists.txt  font_alipuhui.c  hello_world_main.c  idf_component.yml  lvgl_demo_ui.c  lvgl_test.c  main.c  smartconfig.c  smartconfig.h
